# lc3

./: Cargo.toml  README.md
src/: machine.rs  main.rs
