[package]
name = "lc3"
version = "0.1.0"
authors = ["djhworld <djharperuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
getch = "0.2.1"
file-utils = "0.1.5"
nix = "0.13"
simple-error = "0.2.2"
